--- a/index.html
+++ b/index.html
@@ -1,1 +1,60 @@
+<!doctype html>
+<html lang="zh-Hant">
+<head>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>LIFF Minimal</title>
+  <style>
+    body { font-family: system-ui, -apple-system, "Noto Sans TC", Arial; margin: 0; }
+    .wrap { max-width: 680px; margin: 0 auto; padding: 24px; }
+    h1 { font-size: 20px; margin: 0 0 12px; }
+    .card { border: 1px solid #e5e7eb; border-radius: 12px; padding: 16px; }
+    .row { margin: 8px 0; }
+    code { background: #f3f4f6; padding: 2px 6px; border-radius: 6px; }
+    button { padding: 10px 14px; border-radius: 10px; border: 1px solid #ddd; cursor: pointer; }
+  </style>
+  <script src="https://static.line-scdn.net/liff/edge/2/sdk.js"></script>
+</head>
+<body>
+  <div class="wrap">
+    <h1>LIFF Minimal</h1>
+    <div class="card">
+      <div class="row">狀態：<span id="status">初始化中…</span></div>
+      <div class="row">顯示名稱：<span id="displayName">—</span></div>
+      <div class="row">使用者 ID：<code id="userId">—</code></div>
+      <div class="row">
+        <button id="refreshBtn">重新取得 Profile</button>
+        <button id="logoutBtn">登出</button>
+      </div>
+    </div>
+  </div>
+  <script>
+    const LIFF_ID = "YOUR_LIFF_ID"; // ← 換成你的 LIFF ID
+    async function ensureLogin() {
+      if (!liff.isLoggedIn()) { liff.login(); return false; }
+      return true;
+    }
+    async function loadProfile() {
+      const profile = await liff.getProfile();
+      document.getElementById("displayName").textContent = profile.displayName;
+      document.getElementById("userId").textContent = profile.userId;
+    }
+    async function main() {
+      try {
+        document.getElementById("status").textContent = "呼叫 liff.init()…";
+        await liff.init({ liffId: LIFF_ID });
+        const ok = await ensureLogin(); if (!ok) return;
+        document.getElementById("status").textContent = liff.isInClient() ? "已在 LINE 內開啟" : "外部瀏覽器開啟";
+        await loadProfile();
+      } catch (err) {
+        document.getElementById("status").textContent = "發生錯誤：" + (err?.message || err);
+        console.error(err);
+      }
+    }
+    document.getElementById("refreshBtn").addEventListener("click", loadProfile);
+    document.getElementById("logoutBtn").addEventListener("click", () => { if (liff.isLoggedIn()) { liff.logout(); location.reload(); }});
+    main();
+  </script>
+</body>
+</html>
 
