--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </div>
   </div>
   <script>
-    const LIFF_ID = "YOUR_LIFF_ID"; // ← 換成你的 LIFF ID
+    const LIFF_ID = "2008199393-AMqeEVBY"; // ← 換成你的 LIFF ID
     async function ensureLogin() {
       if (!liff.isLoggedIn()) { liff.login(); return false; }
       return true;
