--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
 </form>
 
 <script>
-  const LIFF_ID = "YOUR_LIFF_ID";
+  const LIFF_ID = "2008199393-AMqeEVBY";
   const GAS_ENDPOINT = "YOUR_GAS_WEBAPP_URL"; // 例如 https://script.google.com/macros/s/AKfycb.../exec
 
   async function ensureLogin() {
