--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
         </div>
         <div>
           <label>備註
-            <textarea name="note" rows="3" placeholder="有其它備註可填寫!!"></textarea>
+            <textarea name="note" rows="3" placeholder="送達時間區間、冰塊規格、上樓需求等"></textarea>
           </label>
         </div>
       </div>
