--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
         <div>
           <label>希望送達時間
             <input type="time" name="startTime" required min="08:00" max="17:00" step="900" placeholder="08:00">
-            <small class="help">請選擇 <b>08:00–17:00</b> 之間的時間（每 15 分鐘一檔）</small>
+            <small class="help">請選擇 <b>08:00–17:00</b> </small>
           </label>
         </div>
         <div>
